# duui-py

./: .gitignore  LOGGING_USAGE.md  README.md  annotator_config.example.json  pyproject.toml
examples/spacy-lua-msgpack/: README.md  TypeSystemSpacy.xml  annotator_config.json  spacy_annotator.py  spacy_communication.lua
src/duui_py/: annotator.py  app.py  settings.py  version.py
src/duui_py/codecs/: __init__.py  base.py
src/duui_py/codecs/lua_custom/: __init__.py  codec.py
src/duui_py/codecs/msgpack_v1/: __init__.py  codec.py
src/duui_py/logging/: __init__.py  context.py  core.py  errors.py  metrics.py  streaming.py
src/duui_py/models/: __init__.py  config.py  duui.py  fs_builder.py  uima.py
src/duui_py/utils/: mime.py
