[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "duui-py"
version = "0.1.0"
description = "DUUI Python framework to build DUUI compatible Annotators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dawit Terefe" }]
dependencies = [
    "fastapi>=0.110.0",
    "msgpack>=1.0.7",
    "pydantic>=2.6.0",
    "typing-extensions>=4.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/duui_py"]
